# mcs-dev_02a

./: CMakeLists.txt  README.md  dconfig  main.cpp
docs/html/: annotated.html  cameracontroller_8h_source.html  classcameracontroller-members.html  classcameracontroller.html  classclientstream-members.html  classclientstream.html  classes.html  classrootstream-members.html  classrootstream.html  classserver-members.html  classserver.html  clientstream_8h_source.html  files.html  functions.html  functions_func.html  index.html  rootstream_8h_source.html  server_8h_source.html  struct_camera-members.html  struct_camera.html  struct_stream-members.html  struct_stream.html  structs_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
docs/latex/: annotated.tex  classcameracontroller.tex  classclientstream.tex  classrootstream.tex  classserver.tex  refman.tex  struct_camera.tex  struct_stream.tex
libs/tinyxml2/: tinyxml2.cpp
src/cameracontroller/: cameracontroller.cpp  cameracontroller.h
src/clientstream/: clientstream.cpp  clientstream.h
src/data/: structs.h
src/rootstream/: rootstream.cpp  rootstream.h
src/server/: server.cpp  server.h
